--- a/formulario/style.css
+++ b/formulario/style.css
@@ -179,6 +179,7 @@ fieldset{
 #rodape{
     border-top: 2px solid var(--cor6);
     text-align: center;
+    clear: both;
 
 }    
 #rodape p{
@@ -189,3 +190,142 @@ fieldset{
 #rodape a{
     text-decoration: none;
 }
+
+/*____________________________________
+Página de mídias
+*/
+
+.radio_tv{
+    background: url(img/radio-tv.png) no-repeat;
+    width: 75%;
+    height: 580px;
+    margin: 5px auto;
+}
+
+#filme{
+    width: 430px;
+    height: 380px;
+    display: block;
+    position: relative;
+    top: -30px;
+    left: 90px;
+}
+
+#musica{
+    display: block;
+    position: relative;
+    left: 574px;
+    top: 489px;
+}
+
+/*____________________________________
+Página de fotos
+*/
+
+.galeria1 p{
+    font-family: var(--fonte-titulo);
+    font-size: 1.3em;
+    padding: 5px 15px;
+}
+
+.album_fotos{
+    width: 780px;
+    height: 550px;
+    margin: 0 auto;
+    list-style: none;
+    padding: 50px;
+}
+
+.album_fotos li{
+    border: 3px solid var(--cor1);
+    width: 200px;
+    height: 200px;
+    background: var(--cor6);
+    margin: 10px;
+    float: left;
+    transition: all .4s ease-in;
+}
+
+.galeria{
+    background: rgba(0, 0, 0, 0.5);
+    color: var(--cor5);
+    padding: 5px;
+    font-family: var(--fonte-titulo);
+    font-size: 1.2em;
+    line-height: 350px;
+    opacity: 0;
+}
+ 
+.album_fotos li:hover .galeria{
+    opacity: 1;
+}
+
+.album_fotos li:hover{
+    transform: scale(1.5);
+}
+    
+.album_fotos li.fotos01{ 
+    background: url(img/galeria1.jpg) no-repeat;
+    background-position: 50% 50%;
+    background-size: 700px 500px;
+}
+
+.album_fotos li.fotos01:hover{
+    background-position: 0% 0%;
+    background-size: 200px 200px;
+}    
+
+.album_fotos li.fotos02{ 
+    background: url(img/galeria2.jpg) no-repeat;
+    background-position: 50% 50%;
+    background-size: 700px 500px;
+}
+
+.album_fotos li.fotos02:hover{
+    background-position: 0% 0%;
+    background-size: 200px 200px;
+}    
+
+.album_fotos li.fotos03{ 
+    background: url(img/galeria3.jpg) no-repeat;
+    background-position: 50% 50%;
+    background-size: 700px 500px;
+}
+
+.album_fotos li.fotos03:hover{
+    background-position: 0% 0%;
+    background-size: 200px 200px;
+}    
+
+.album_fotos li.fotos04{ 
+    background: url(img/galeria4.jpg) no-repeat;
+    background-position: 50% 50%;
+    background-size: 700px 500px;
+}
+
+.album_fotos li.fotos04:hover{
+    background-position: 0% 0%;
+    background-size: 200px 200px;
+}    
+
+.album_fotos li.fotos05{ 
+    background: url(img/galeria5.jpg) no-repeat;
+    background-position: 50% 50%;
+    background-size: 700px 500px;
+}
+
+.album_fotos li.fotos05:hover{
+    background-position: 0% 0%;
+    background-size: 200px 200px;
+}    
+
+.album_fotos li.fotos06{ 
+    background: url(img/galeria6.jpg) no-repeat;
+    background-position: 50% 50%;
+    background-size: 700px 500px;
+}
+
+.album_fotos li.fotos06:hover{
+    background-position: 0% 0%;
+    background-size: 200px 200px;
+}    
