--- a/front end/style.css
+++ b/front end/style.css
@@ -62,6 +62,12 @@ body{
     align-items: center;
 }
 
+.flex3{
+    display: flex;
+    flex-direction: column;
+}
+
+
 /*SMARTPHONE PORTRAIT*/
 /*Cabeçalho*/
 header{
@@ -151,6 +157,24 @@ main h2{
     margin-right: 10px;
 }
 
+/*ONE PAGE*/
+#onepage{
+    padding: 50px 10px;   
+}
+#onepage h2{
+    font-family: var(--titulo);
+    margin-bottom: 10px;
+    font-size: 2em;
+}
+#onepage p{
+    font-family: var(--texto);
+    margin-bottom: 25px;
+    font-size: 1.4em;
+}
+.video iframe{
+    width: 340px;
+    height: 190px;
+}
 
 /*SMARTPHONE LANDSCAPE*/
 @media (min-width:576px) {
@@ -171,6 +195,12 @@ main h2{
         text-shadow: #fdcf03 0.2em 0.2em 0.2em; 
     
     } 
+
+    /*ONE PAGE*/
+    .video iframe{
+        width: 560px;
+        height: 315px;
+    }
 }
 
 /*TABLET PORTRAIT*/
@@ -268,6 +298,12 @@ main h2{
     }
     #sobre{
         background-attachment: fixed; /*Efeito Parallax*/
+    }
+
+    /*ONEPAGE*/
+    .flex3{
+        flex-direction: row;
+        align-items: center;
     }
 }
 
