--- a/front end/style.css
+++ b/front end/style.css
@@ -67,9 +67,27 @@ body{
     flex-direction: column;
 }
 
+.flex4 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+}
+
+.flex5 {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.flex6 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 .card{
     margin-top: 25px;
-    width: 338px;
+    width: 340px;
     height: 535px;
     background: var(--cor2);
     border: 1px solid var(--cor6);
@@ -78,7 +96,7 @@ body{
 }
 
 .card img{
-    border-radius: 25px 25px 0px 0px;
+    border-radius: 25px 25px 10px 10px;
 }
 .card h3{
     margin-top: 15px;
@@ -129,8 +147,8 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     color: #fd0303;
-    font-family: var(--cor6);
-    font-style: 1.5em;
+    font-family: var(--texto);
+    font-style: var(--titulo);
 }
 #check:checked ~ ul{
     right: 0;
@@ -247,7 +265,47 @@ main h2{
     font-family: var(--titulo);
 }
 
-/*SMARTPHONE LANDSCAPE*/
+/*RODAPÉ*/
+address {
+    padding: 35px 10px 50px 10px;
+    background: url(img/background5.jpg);
+    background-size: cover;
+    background-position: center;
+    color: var(--cor6); 
+}
+
+address a{
+    text-decoration: none;
+    color: var(--cor6);
+}
+
+address img{
+    padding-top: 15px;
+}
+
+.icone_local{
+    display: none;
+}
+
+.dados{
+    margin: 30px 0px 15px 0px;
+}
+.google_maps{
+    display: none;
+}
+
+footer{
+    padding: 50px;
+    background: var(--cor3);
+    color: var(--cor1);
+    text-align: center;
+}
+.social{
+    margin: 15px 0px;
+}
+
+
+/*SMARTPHONE LANDSCAPE (deitado)*/
 @media (min-width:576px) {
     /*body{
         background: #d83a54;
@@ -271,6 +329,16 @@ main h2{
     .video iframe{
         width: 560px;
         height: 315px;
+    }
+
+    /*RODAPÉ*/
+    .flex5{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .social{
+        margin: 0;
     }
 }
 
@@ -390,6 +458,25 @@ main h2{
     .qrcode{
         display: inline;
         
+    }
+
+    /*RODAPÉ*/
+    .icone_local{
+        display: inline;
+    }
+    .icone_mapa{
+        display: none;
+    }
+    .google_maps{
+        display: inline;
+    }
+    .flex6{
+        flex-direction: row-reverse;
+    }
+    address{
+        font-size: 1.5em;
+        font-family: var(--texto);
+        font-weight: 700;
     }
 }
 
